# nixos-dotfiles

./: .gitignore  .gitmodules  KEYBINDINGS.md  LUKS.md  MONITOR-DETECTION.md  README-host-setup.md  README-module-structure.md  README-modules.md  README-yubikey.md  README.md  result  setup-secrets.sh  test.sh
home/.config/hypr/: hyprland.conf
nixos/: .gitignore  .gitmodules.example  README-secrets-submodule.md  README-secrets.md  README-yubikey.md  bash_alias.txt  configuration.nix  flake.nix  framepack.nix  hyprland.nix  info-fetchers.nix  linux-kernel.nix  llm.nix  multimedia.nix  networking.nix  nvidia.nix  openssh.nix  terminal-utils.nix  usb.nix  users.nix  utils.nix  virtualisation.nix  yubikey.nix
nixos/home/: aiterm.nix  bat.nix  blahst.nix  bottom.nix  default.nix  delta.nix  dunst.nix  file-manager.nix  fish.nix  ghostty.nix  git.nix  gpg.nix  gtk.nix  helix.nix  hyprland-config.nix  hyprland.nix  hyprpanel.nix  kitty.nix  mpv.nix  neofetch.nix  neovim.nix  per-host-config.nix  qutebrowser.nix  rofi.nix  ssh.nix  starship.nix  swappy.nix  tealdeer.nix  thunar.nix  waybar.nix  wlogout.nix  xfce4.nix  zathura.nix  zellij.nix
nixos/hosts/: example-laptop.nix  example-laptop.nix.bak  example-workstation.nix  example-workstation.nix.bak  laptop.nix  workstation.nix
nixos/hosts/common/: default.nix
nixos/hosts/laptop/: default.nix
nixos/hosts/workstation/: default.nix  hardware-configuration.nix
nixos/modules/: README.md  default.nix  home-bridge.nix  host-config.nix  host-options.nix  llm-local.nix  llm.nix  module-manager.nix  per-host.nix  secrets.nix  services.nix  template.nix
nixos/modules/ai/: audio.nix  browser.nix  chat.nix  coding.nix  inference.nix  multimedia.nix
nixos/modules/applications/: gaming.nix  multimedia.nix  printing.nix  text-editing.nix  virtualisation.nix  winboat.nix
nixos/modules/apps/: cad.nix
nixos/modules/common/: base.nix  hyprland.nix
nixos/modules/desktop/: display-manager.nix  fonts.nix  hyprland.nix  input-method.nix  theme.nix
nixos/modules/development/: cad.nix  db.nix  devops.nix  hardware.nix  ide.nix  info-fetchers.nix  llm-local.nix  llm.nix  lsp.nix  programming-languages.nix  toolchain.nix  wasm.nix  work.nix
nixos/modules/hardware/: bluetooth.nix  fingerprint-scanner.nix  firmware.nix  nvidia.nix  opengl.nix  usb.nix  wacom.nix  yubikey.nix
nixos/modules/network/: vpn.nix
nixos/modules/networking/: dns.nix  networking.nix  openssh.nix  vpn.nix
nixos/modules/security/: clamav-scanner.nix  security-services.nix
nixos/modules/system/: auto-upgrade.nix  bootloader.nix  gc.nix  (+13 more)
nixos/pkgs/: framepack.nix
user/: .gitconfig
user/projects/: LSP-SETUP.md
user/projects/optimized-pre-config-python/: .gitignore  README.md  flake.nix  justfile  pyproject.toml  requirements.txt
(+15 files in other folders)
